--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,13 @@ rust-version = "1.81"
 
 [dependencies]
 typenum = { version = "1.17", features = ["const-generics"] }
+
+# optional dependencies
+serde = { version = "1", optional = true, default-features = false }
 zeroize = { version = "1.8", optional = true, default-features = false }
+
+[dev-dependencies]
+bincode = "1"
 
 [features]
 extra-sizes = []
