--- a/.github/workflows/hybrid-array.yml
+++ b/.github/workflows/hybrid-array.yml
@@ -37,8 +37,11 @@ jobs:
           toolchain: ${{ matrix.rust }}
           targets: ${{ matrix.target }}
       - run: cargo build --no-default-features --target ${{ matrix.target }}
+      - run: cargo build --no-default-features --target ${{ matrix.target }} --features bytemuck
       - run: cargo build --no-default-features --target ${{ matrix.target }} --features extra-sizes
       - run: cargo build --no-default-features --target ${{ matrix.target }} --features serde
+      - run: cargo build --no-default-features --target ${{ matrix.target }} --features zeroize
+      - run: cargo build --no-default-features --target ${{ matrix.target }} --all-features
 
   careful:
     runs-on: ubuntu-latest
@@ -106,5 +109,8 @@ jobs:
         with:
           toolchain: ${{ matrix.toolchain }}
       - run: cargo test
+      - run: cargo test --features bytemuck
+      - run: cargo test --features extra-sizes
       - run: cargo test --features serde
+      - run: cargo test --features zeroize
       - run: cargo test --all-features
