--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ typenum = { version = "1.17", features = ["const-generics"] }
 # optional dependencies
 bytemuck = { version = "1", optional = true, default-features = false }
 serde = { version = "1", optional = true, default-features = false }
+subtle = { version = "2", optional = true, default-features = false }
 zeroize = { version = "1.8", optional = true, default-features = false }
 
 [dev-dependencies]
