Add `alloc` feature with `Box`/`Vec` conversions
Adds `TryFrom` impls which convert from `Box`/`Vec`.

The main impetus for this is #114 where it's noted such conversions work
for `[T; N]` but don't work for the `Array` type, where we are trying
to make a type which works as much like core arrays as possible.

Closes #114

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ zeroize = { version = "1.8", optional = true, default-features = false }
 bincode = { version = "2", features = ["serde"] }
 
 [features]
+alloc = []
 extra-sizes = []
 
 [package.metadata.docs.rs]
