--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ rust-version = "1.85"
 typenum = { version = "1.17", features = ["const-generics"] }
 
 # optional dependencies
+arbitrary = { version = "1", optional = true }
 bytemuck = { version = "1", optional = true, default-features = false }
 serde = { version = "1", optional = true, default-features = false }
 subtle = { version = "2", optional = true, default-features = false, features = ["const-generics"] }
