--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ bytemuck = { version = "1", optional = true, default-features = false }
 serde = { version = "1", optional = true, default-features = false }
 subtle = { version = "2", optional = true, default-features = false, features = ["const-generics"] }
 zeroize = { version = "1.8", optional = true, default-features = false }
+zerocopy = { version = "0.8", optional = true, features = ["derive"] }
 
 [features]
 alloc = []
