--- a/.github/workflows/hybrid-array.yml
+++ b/.github/workflows/hybrid-array.yml
@@ -79,7 +79,7 @@ jobs:
       - uses: actions/checkout@v6
       - uses: dtolnay/rust-toolchain@nightly
       - run: rustup component add miri && cargo miri setup
-      - run: cargo miri test --target ${{ matrix.target }} --all-features
+      - run: cargo miri test --target ${{ matrix.target }} --features alloc
 
   rustfmt:
     runs-on: ubuntu-latest
